ICKY-432 Alignment fixes

--- a/assets/styles/components/organisms/SfMegaMenu.scss
+++ b/assets/styles/components/organisms/SfMegaMenu.scss
@@ -18,7 +18,7 @@
 
   .sf-mega-menu-column {
     flex: none;
-    margin: var(--spacer-2xs) var(--spacer-2xl) var(--spacer-2xs) 0;
+    margin: var(--spacer-2xs) calc(var(--spacer-lg) * 2) var(--spacer-2xs) 0;
     padding: 0;
 
     .sf-mega-menu-column__header.sf-menu-item {
@@ -30,14 +30,14 @@
     &__header {
       border-bottom: var(--spacer-2xs) var(--c-white) solid;
       text-transform: capitalize;
-      margin: calc(var(--spacer-base) * 0.5) 0 calc(var(--spacer-base) * 0.4) 0;
+      margin: calc(var(--spacer-base) * 0.6) 0 calc(var(--spacer-base) * 0.3) 0;
     }
 
     &__content {
       display: none;
       position: absolute;
       top: calc(var(--spacer-xl) * 1.4);;
-      left: -1.5rem;
+      left: -1.6rem;
       align-items: center;
       padding: 0 2%;
       background-color: var(--c-white);
